--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
@@ -35,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.10",
     "@types/pg": "^8.10.7",
+    "@types/uuid": "^9.0.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
