--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serverless_module_2_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.mjs",
+  "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,13 +21,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -35,7 +31,6 @@
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.10",
-    "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
