--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.3.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1"
   },
